--- a/pymaceuticals_starter.ipynb
+++ b/pymaceuticals_starter.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -249,14 +249,15 @@
        "249"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Checking the number of mice.\n",
-    "len(merged_data[\"Mouse ID\"].unique())"
+    "len(merged_data[\"Mouse ID\"].unique())\n",
+    "\n"
    ]
   },
   {
@@ -441,12 +442,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# renaming columns \n",
+    "\n",
+    "#clean_df.rename(columns = {'Tumor Volume (mm3)' : 'Tumor_Volume',\n",
+    "                          #'Drug Regimen' : 'Drug_Regimen'})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Drug Regimen\n",
+       "Capomulin    40.675741\n",
+       "Ceftamin     52.591172\n",
+       "Infubinol    52.884795\n",
+       "Ketapril     55.235638\n",
+       "Naftisol     54.331565\n",
+       "Placebo      54.033581\n",
+       "Propriva     52.393463\n",
+       "Ramicane     40.216745\n",
+       "Stelasyn     54.233149\n",
+       "Zoniferol    53.236507\n",
+       "Name: Tumor Volume (mm3), dtype: float64"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "# Generate a summary statistics table of mean, median, variance, standard deviation, and SEM of the tumor volume for each regimen\n",
     "\n",
+    "mean = clean_df.groupby(\"Drug Regimen\")[\"Tumor Volume (mm3)\"].mean()\n",
+    "\n",
+    "mean\n",
     "# This method is the most straighforward, creating multiple series and putting them all together at the end.\n",
     "\n"
    ]
